--- a/Program 4.vcxproj.filters
+++ b/Program 4.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="Funny.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ClassMovie.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="InventoryManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -49,6 +46,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ClassicMovie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -84,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Customer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ClassicMovie.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
